--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <link href="
     https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
     " rel="stylesheet">
-    <script src="./gallery.js" type="module"></script>
+    <script src="./JS/gallery.js" type="module"></script>
   </body>
 </html>
