--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css"/>
-  </head>
-  <body>
-    <ul class="gallery"></ul>
-    <script src="
-    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-    " async></script>
     <link href="
     https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
     " rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css"/>
+  </head>
+  <body>
+    <ul class="gallery">
+      
+    </ul>
+    <script src="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+    " async></script>
+    
     <script src="./gallery.js" type="module"></script>
   </body>
 </html>
